rubygems-integration (1.7) UNRELEASED; urgency=medium

  * Drop dependency on Ruby, since the interpreters now actually depend on
    this package.

 -- Antonio Terceiro <terceiro@debian.org>  Wed, 30 Apr 2014 10:25:57 -0300

rubygems-integration (1.6) unstable; urgency=medium

  * debian/tests/package-list: make output easier to read. First output the
    list of gems to a file, then grep that file.
  * Drop rdoc workaround for Ruby 1.9
  * Add support for disabling rubygems-integration by setting an environment
    variable DEBIAN_DISABLE_RUBYGEMS_INTEGRATION.

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 10 Apr 2014 16:47:15 -0300

rubygems-integration (1.5) unstable; urgency=medium

  * Add /usr/share/rubygems-integration/all to the gem path.
    This will allow installing a single gemspec for `Architecture: all`
    packages that will work with every interpreter, and won't require a new
    upload when a new interpreter comes along.

 -- Antonio Terceiro <terceiro@debian.org>  Mon, 10 Feb 2014 12:16:17 -0300

rubygems-integration (1.4) unstable; urgency=medium

  [ Christian Hofstaedtler ]
  * Support Ruby 2.0+ "default gems" directory

  [ Antonio Terceiro ]
  * Mark as Multi-Arch: foreign
  * Workaround problem with install path of ruby2.0
  * add autopkgtests

 -- Antonio Terceiro <terceiro@debian.org>  Thu, 16 Jan 2014 18:24:54 +0100

rubygems-integration (1.3) unstable; urgency=medium

  * Team upload.

  [ Antonio Terceiro ]
  * Make it possible interpreter to run tests under

  [ Cédric Boutillier ]
  * Bump Standards-Version to 3.9.5 (no changes needed)
  * Drop rubygems from suggested packages, since shipped by Ruby 1.9+

 -- Cédric Boutillier <boutil@debian.org>  Thu, 16 Jan 2014 16:27:13 +0100

rubygems-integration (1.2) unstable; urgency=low

  [ Cédric Boutillier ]
  * debian/control: remove obsolete DM-Upload-Allowed flag
  * use canonical URI in Vcs-* fields

  [ Christian Hofstaedtler ]